put back the alignment. noticed that license upload grid are broken on a fixed size margin

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -781,6 +781,6 @@ a  {
 
 @media screen and (min-width: 1100px) {
   .division {
-    margin: 1rem 10%;
+    margin: 1rem auto;
   }
 }
