--- a/client/src/components/AdminDashboard/viewprofile.css
+++ b/client/src/components/AdminDashboard/viewprofile.css
@@ -705,9 +705,8 @@ padding: 0;
 }
 
 
-@media screen and (min-width: 1250px) {
+@media screen and (min-width: 1100px) {
     .licenseimage>.studentimage, .studentupload .imageupload {
         grid-template-columns: repeat(4,1fr);
-        gap: .5rem;
     }
 }
